# house-price

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  X_test.csv.dvc  X_train.csv.dvc  infer.py  model.joblib.dvc  pyproject.toml  train.py  y_test.csv.dvc  y_train.csv.dvc
.dvc/: config
configs/: config.yaml
data/: X_test.csv  data.csv.dvc  y_test.csv
