[tool.poetry]
name = "mlops-house-price"
version = "0.1.0"
description = "House price prediction project"
authors = ["artem-pospelov <https://github.com/artem-pospelov>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/artem-pospelov/mlops_house_price"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
joblib = "^1.3.2"
scikit-learn = "^1.3.2"
tensorboard = "^2.15.1"
hydra-core = "^1.3.2"
dvc-gdrive = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
